<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/second"
    tools:context=".ui.secondactivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:orientation="horizontal">
        style="@style/ss"

        <Button
            android:id="@+id/btn_coach"
            style="@style/sss"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50px"
            android:background="@drawable/default_button"

            android:text="@string/coach"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_supplements"
            style="@style/sss"
            android:textColor="#ffffff"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:background="@drawable/default_button"
            android:text="@string/supplements" />

        <Button
            android:id="@+id/btn_doctor"
            style="@style/sss"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:background="@drawable/default_button"
            android:text="@string/doctor"

            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
    </LinearLayout>

</LinearLayout>
