<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        style="@style/sss"
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:src="@drawable/th" />

    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
     <TextView
         style="@style/sss"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/username"/>
       <EditText
           style="@style/sss"
           android:id="@+id/edt_username"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"/>
   </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            style="@style/sss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            style="@style/sss"
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_button"
        style="@style/sss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:text="@string/login" />
</LinearLayout>
